# Cache_system

./: .gitignore  CMakeLists.txt  build_script.sh  demo.py  flake.nix
.cache/clangd/index/: cache.cpp.8187631470FA57BD.idx  cache.hpp.4ACC927BB851EBEF.idx  cache_bindings.cpp.F3635D3C2A4B5667.idx  cache_tests.cpp.CF88D94E82469AED.idx  lru_strategy.cpp.3D2BACD83DEB5800.idx  lru_strategy.hpp.A6545C30F7E2BBB0.idx  performance_tests.cpp.5A83351E813A5B3B.idx
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1gyamp98ipj5j2xl1h6zcv5p045crczn-source  jld2gamlrnnfbs4z9cnz2yax9smas0g8-source  ldx6scrm66l1j2q7qsy6klwajn2zpn86-source  qr2glh5rn0drcjgwzd09k3qnibc2a9q3-source
data/: cache_test.json
example/: cache_example.py  cache_performance_test.py
include/: cache.hpp  json_storage.hpp  lru_strategy.hpp  metrics.hpp
include/cache/: cache_item.hpp  lru_cache.hpp  metrics.hpp  pybind_utils.hpp
pybind/: cache_bindings.cpp
src/: cache.cpp  json_storage.cpp  lru_strategy.cpp  metrics.cpp  python_bindings.cpp
src/cache/: cache_item.cpp  lru_cache.cpp  metrics.cpp
tests/: cache_tests.cpp  performance_tests.cpp  test_cache.cpp
